--- a/sellit/src/main/java/com/sellit/controller/Dashboard.fxml
+++ b/sellit/src/main/java/com/sellit/controller/Dashboard.fxml
@@ -1,39 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.DashboardController">
+<AnchorPane prefHeight="900.0" prefWidth="1700.0" style="-fx-background-color: #FFFFFF;" stylesheets="@../../../../resources/css/bootstrap3.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sellit.controller.DashboardController">
    <children>
-      <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="450.0" layoutY="14.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="886.0" layoutY="14.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="14.0" layoutY="386.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="450.0" layoutY="386.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="886.0" layoutY="386.0" prefHeight="300.0" prefWidth="300.0">
-         <children>
-            <ListView layoutX="11.0" prefHeight="300.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
+      <Button layoutX="50.0" layoutY="100.0" mnemonicParsing="false" onAction="#logout" prefHeight="100.0" prefWidth="100.0" styleClass="info" text="Logout" />
+      <Button layoutX="50.0" layoutY="250.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="100.0" styleClass="info" />
    </children>
 </AnchorPane>
