--- a/sellit/src/main/java/com/sellit/controller/LoginView.fxml
+++ b/sellit/src/main/java/com/sellit/controller/LoginView.fxml
@@ -3,7 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -14,7 +14,6 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="561.0" prefWidth="385.0">
                <children>
                   <Label layoutX="60.0" layoutY="57.0" text="PIN" />
-                  <TextField fx:id="pinField" layoutX="170.0" layoutY="51.0" onAction="#login" prefWidth="211.0" />
                   <Button layoutX="282.0" layoutY="455.0" mnemonicParsing="false" onAction="#login" prefHeight="100.0" prefWidth="100.0" text="Login">
                      <styleClass>
                         <String fx:value="success" />
@@ -86,6 +85,7 @@
                         <String fx:value="info" />
                      </styleClass>
                   </Button>
+                  <PasswordField fx:id="pinField" layoutX="170.0" layoutY="51.0" prefWidth="211.0" />
                </children>
             </AnchorPane>
         </content>
